// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render itself 1`] = `
<ChangePassword
  errors={[]}
  lostPasswordToken="foo"
  url="foo/bar"
>
  <LoginPage
    backgroundImgAlt="Red Hat 3scale API Management"
    backgroundImgSrc=""
    brandImgAlt="Red Hat 3scale API Management"
    brandImgSrc=""
    loginTitle="Change Password"
  >
    <Login
      className=""
      footer={
        <LoginFooter>
          <p>
            
          </p>
          <List />
        </LoginFooter>
      }
      header={
        <LoginHeader
          headerBrand={
            <React.Fragment>
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              />
            </React.Fragment>
          }
        />
      }
    >
      <div
        className="pf-c-login"
      >
        <div
          className="pf-c-login__container"
        >
          <LoginHeader
            headerBrand={
              <React.Fragment>
                <Brand
                  alt="Red Hat 3scale API Management"
                  src=""
                />
              </React.Fragment>
            }
          >
            <header
              className="pf-c-login__header"
            >
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              >
                <img
                  alt="Red Hat 3scale API Management"
                  className="pf-c-brand"
                  src=""
                />
              </Brand>
            </header>
          </LoginHeader>
          <main
            className="pf-c-login__main"
          >
            <LoginMainHeader
              title="Change Password"
            >
              <header
                className="pf-c-login__main-header"
              >
                <Title
                  headingLevel="h2"
                  size="3xl"
                >
                  <h2
                    className="pf-c-title pf-m-3xl"
                    data-ouia-component-id="OUIA-Generated-Title-1"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe={true}
                  >
                    Change Password
                  </h2>
                </Title>
              </header>
            </LoginMainHeader>
            <LoginMainBody>
              <div
                className="pf-c-login__main-body"
              >
                0
                <Form
                  acceptCharset="UTF-8"
                  action="foo/bar"
                  id="edit_user_2"
                  method="post"
                  noValidate={true}
                  onChange={[Function]}
                >
                  <FormBase
                    acceptCharset="UTF-8"
                    action="foo/bar"
                    id="edit_user_2"
                    innerRef={null}
                    method="post"
                    noValidate={true}
                    onChange={[Function]}
                  >
                    <form
                      acceptCharset="UTF-8"
                      action="foo/bar"
                      className="pf-c-form"
                      id="edit_user_2"
                      method="post"
                      noValidate={true}
                      onChange={[Function]}
                    >
                      <input
                        name="_method"
                        type="hidden"
                        value="put"
                      />
                      <HiddenInputs>
                        <input
                          name="utf8"
                          type="hidden"
                          value="✓"
                        />
                        <CSRFToken>
                          <input
                            name="mocked-csrf-param"
                            type="hidden"
                            value="mocked-csrf-token"
                          />
                        </CSRFToken>
                      </HiddenInputs>
                      <PasswordField
                        inputProps={
                          {
                            "autoFocus": true,
                            "errorMessage": undefined,
                            "fieldId": "user_password",
                            "isRequired": true,
                            "isValid": true,
                            "label": "Password",
                            "name": "user[password]",
                            "onBlur": [Function],
                            "onChange": [Function],
                            "value": "",
                          }
                        }
                      >
                        <FormGroup
                          helperTextInvalid="Password is mandatory"
                          inputProps={
                            {
                              "autoFocus": true,
                              "errorMessage": undefined,
                              "fieldId": "user_password",
                              "isRequired": true,
                              "isValid": true,
                              "label": "Password",
                              "name": "user[password]",
                              "onBlur": [Function],
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                          type="password"
                        >
                          <FormGroup
                            autoComplete="off"
                            fieldId="user_password"
                            helperTextInvalid="Password is mandatory"
                            isRequired={true}
                            label="Password"
                            validated="default"
                          >
                            <GenerateId
                              prefix="pf-random-id-"
                            >
                              <div
                                autoComplete="off"
                                className="pf-c-form__group"
                              >
                                <div
                                  className="pf-c-form__group-label"
                                >
                                  <label
                                    className="pf-c-form__label"
                                    htmlFor="user_password"
                                  >
                                    <span
                                      className="pf-c-form__label-text"
                                    >
                                      Password
                                    </span>
                                    <span
                                      aria-hidden="true"
                                      className="pf-c-form__label-required"
                                    >
                                       
                                      *
                                    </span>
                                  </label>
                                   
                                </div>
                                <div
                                  className="pf-c-form__group-control"
                                >
                                  <TextInput
                                    autoComplete="off"
                                    autoFocus={true}
                                    id="user_password"
                                    isRequired={true}
                                    name="user[password]"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    type="password"
                                    validated="default"
                                    value=""
                                  >
                                    <TextInputBase
                                      aria-label={null}
                                      autoComplete="off"
                                      autoFocus={true}
                                      className=""
                                      id="user_password"
                                      innerRef={null}
                                      isDisabled={false}
                                      isIconSprite={false}
                                      isLeftTruncated={false}
                                      isReadOnly={false}
                                      isRequired={true}
                                      name="user[password]"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      ouiaSafe={true}
                                      type="password"
                                      validated="default"
                                      value=""
                                    >
                                      <input
                                        aria-invalid={false}
                                        aria-label={null}
                                        autoComplete="off"
                                        autoFocus={true}
                                        className="pf-c-form-control"
                                        data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                                        data-ouia-component-type="PF4/TextInput"
                                        data-ouia-safe={true}
                                        disabled={false}
                                        id="user_password"
                                        name="user[password]"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        required={true}
                                        type="password"
                                        value=""
                                      />
                                    </TextInputBase>
                                  </TextInput>
                                </div>
                              </div>
                            </GenerateId>
                          </FormGroup>
                        </FormGroup>
                      </PasswordField>
                      <PasswordConfirmationField
                        inputProps={
                          {
                            "errorMessage": undefined,
                            "fieldId": "user_password_confirmation",
                            "isRequired": true,
                            "isValid": true,
                            "label": "Password confirmation",
                            "name": "user[password_confirmation]",
                            "onBlur": [Function],
                            "onChange": [Function],
                            "value": "",
                          }
                        }
                      >
                        <FormGroup
                          helperTextInvalid="Password confirmation is mandatory"
                          inputProps={
                            {
                              "errorMessage": undefined,
                              "fieldId": "user_password_confirmation",
                              "isRequired": true,
                              "isValid": true,
                              "label": "Password confirmation",
                              "name": "user[password_confirmation]",
                              "onBlur": [Function],
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                          type="password"
                        >
                          <FormGroup
                            autoComplete="off"
                            fieldId="user_password_confirmation"
                            helperTextInvalid="Password confirmation is mandatory"
                            isRequired={true}
                            label="Password confirmation"
                            validated="default"
                          >
                            <GenerateId
                              prefix="pf-random-id-"
                            >
                              <div
                                autoComplete="off"
                                className="pf-c-form__group"
                              >
                                <div
                                  className="pf-c-form__group-label"
                                >
                                  <label
                                    className="pf-c-form__label"
                                    htmlFor="user_password_confirmation"
                                  >
                                    <span
                                      className="pf-c-form__label-text"
                                    >
                                      Password confirmation
                                    </span>
                                    <span
                                      aria-hidden="true"
                                      className="pf-c-form__label-required"
                                    >
                                       
                                      *
                                    </span>
                                  </label>
                                   
                                </div>
                                <div
                                  className="pf-c-form__group-control"
                                >
                                  <TextInput
                                    autoComplete="off"
                                    id="user_password_confirmation"
                                    isRequired={true}
                                    name="user[password_confirmation]"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    type="password"
                                    validated="default"
                                    value=""
                                  >
                                    <TextInputBase
                                      aria-label={null}
                                      autoComplete="off"
                                      className=""
                                      id="user_password_confirmation"
                                      innerRef={null}
                                      isDisabled={false}
                                      isIconSprite={false}
                                      isLeftTruncated={false}
                                      isReadOnly={false}
                                      isRequired={true}
                                      name="user[password_confirmation]"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      ouiaSafe={true}
                                      type="password"
                                      validated="default"
                                      value=""
                                    >
                                      <input
                                        aria-invalid={false}
                                        aria-label={null}
                                        autoComplete="off"
                                        className="pf-c-form-control"
                                        data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                                        data-ouia-component-type="PF4/TextInput"
                                        data-ouia-safe={true}
                                        disabled={false}
                                        id="user_password_confirmation"
                                        name="user[password_confirmation]"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        required={true}
                                        type="password"
                                        value=""
                                      />
                                    </TextInputBase>
                                  </TextInput>
                                </div>
                              </div>
                            </GenerateId>
                          </FormGroup>
                        </FormGroup>
                      </PasswordConfirmationField>
                      <input
                        id="password_reset_token"
                        name="password_reset_token"
                        type="hidden"
                        value="foo"
                      />
                      <ActionGroup>
                        <div
                          className="pf-c-form__group pf-m-action"
                        >
                          <div
                            className="pf-c-form__group-control"
                          >
                            <div
                              className="pf-c-form__actions"
                            >
                              <Button
                                className="pf-c-button pf-m-primary pf-m-block"
                                isDisabled={true}
                                name="commit"
                                type="submit"
                              >
                                <ButtonBase
                                  className="pf-c-button pf-m-primary pf-m-block"
                                  innerRef={null}
                                  isDisabled={true}
                                  name="commit"
                                  type="submit"
                                >
                                  <button
                                    aria-disabled={true}
                                    aria-label={null}
                                    className="pf-c-button pf-m-primary pf-m-disabled pf-c-button pf-m-primary pf-m-block"
                                    data-ouia-component-id="OUIA-Generated-Button-primary-1"
                                    data-ouia-component-type="PF4/Button"
                                    data-ouia-safe={true}
                                    disabled={true}
                                    name="commit"
                                    role={null}
                                    tabIndex={null}
                                    type="submit"
                                  >
                                    Change Password
                                  </button>
                                </ButtonBase>
                              </Button>
                            </div>
                          </div>
                        </div>
                      </ActionGroup>
                    </form>
                  </FormBase>
                </Form>
              </div>
            </LoginMainBody>
          </main>
          <LoginFooter>
            <footer
              className="pf-c-login__footer"
            >
              <p />
              <List>
                <ul
                  className="pf-c-list"
                />
              </List>
            </footer>
          </LoginFooter>
        </div>
      </div>
    </Login>
  </LoginPage>
</ChangePassword>
`;

exports[`should render with server side errors when present 1`] = `
<ChangePassword
  errors={
    [
      {
        "message": "Ooops!",
        "type": "error",
      },
    ]
  }
  lostPasswordToken="foo"
  url="foo/bar"
>
  <LoginPage
    backgroundImgAlt="Red Hat 3scale API Management"
    backgroundImgSrc=""
    brandImgAlt="Red Hat 3scale API Management"
    brandImgSrc=""
    loginTitle="Change Password"
  >
    <Login
      className=""
      footer={
        <LoginFooter>
          <p>
            
          </p>
          <List />
        </LoginFooter>
      }
      header={
        <LoginHeader
          headerBrand={
            <React.Fragment>
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              />
            </React.Fragment>
          }
        />
      }
    >
      <div
        className="pf-c-login"
      >
        <div
          className="pf-c-login__container"
        >
          <LoginHeader
            headerBrand={
              <React.Fragment>
                <Brand
                  alt="Red Hat 3scale API Management"
                  src=""
                />
              </React.Fragment>
            }
          >
            <header
              className="pf-c-login__header"
            >
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              >
                <img
                  alt="Red Hat 3scale API Management"
                  className="pf-c-brand"
                  src=""
                />
              </Brand>
            </header>
          </LoginHeader>
          <main
            className="pf-c-login__main"
          >
            <LoginMainHeader
              title="Change Password"
            >
              <header
                className="pf-c-login__main-header"
              >
                <Title
                  headingLevel="h2"
                  size="3xl"
                >
                  <h2
                    className="pf-c-title pf-m-3xl"
                    data-ouia-component-id="OUIA-Generated-Title-2"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe={true}
                  >
                    Change Password
                  </h2>
                </Title>
              </header>
            </LoginMainHeader>
            <LoginMainBody>
              <div
                className="pf-c-login__main-body"
              >
                <FlashMessages
                  flashMessages={
                    [
                      {
                        "message": "Ooops!",
                        "type": "error",
                      },
                    ]
                  }
                >
                  <div>
                    <p
                      className="pf-c-form__helper-text pf-m-error"
                      key="Ooops!"
                    >
                      <ExclamationCircleIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          />
                        </svg>
                      </ExclamationCircleIcon>
                       Ooops!
                    </p>
                  </div>
                </FlashMessages>
                <Form
                  acceptCharset="UTF-8"
                  action="foo/bar"
                  id="edit_user_2"
                  method="post"
                  noValidate={true}
                  onChange={[Function]}
                >
                  <FormBase
                    acceptCharset="UTF-8"
                    action="foo/bar"
                    id="edit_user_2"
                    innerRef={null}
                    method="post"
                    noValidate={true}
                    onChange={[Function]}
                  >
                    <form
                      acceptCharset="UTF-8"
                      action="foo/bar"
                      className="pf-c-form"
                      id="edit_user_2"
                      method="post"
                      noValidate={true}
                      onChange={[Function]}
                    >
                      <input
                        name="_method"
                        type="hidden"
                        value="put"
                      />
                      <HiddenInputs>
                        <input
                          name="utf8"
                          type="hidden"
                          value="✓"
                        />
                        <CSRFToken>
                          <input
                            name="mocked-csrf-param"
                            type="hidden"
                            value="mocked-csrf-token"
                          />
                        </CSRFToken>
                      </HiddenInputs>
                      <PasswordField
                        inputProps={
                          {
                            "autoFocus": true,
                            "errorMessage": undefined,
                            "fieldId": "user_password",
                            "isRequired": true,
                            "isValid": true,
                            "label": "Password",
                            "name": "user[password]",
                            "onBlur": [Function],
                            "onChange": [Function],
                            "value": "",
                          }
                        }
                      >
                        <FormGroup
                          helperTextInvalid="Password is mandatory"
                          inputProps={
                            {
                              "autoFocus": true,
                              "errorMessage": undefined,
                              "fieldId": "user_password",
                              "isRequired": true,
                              "isValid": true,
                              "label": "Password",
                              "name": "user[password]",
                              "onBlur": [Function],
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                          type="password"
                        >
                          <FormGroup
                            autoComplete="off"
                            fieldId="user_password"
                            helperTextInvalid="Password is mandatory"
                            isRequired={true}
                            label="Password"
                            validated="default"
                          >
                            <GenerateId
                              prefix="pf-random-id-"
                            >
                              <div
                                autoComplete="off"
                                className="pf-c-form__group"
                              >
                                <div
                                  className="pf-c-form__group-label"
                                >
                                  <label
                                    className="pf-c-form__label"
                                    htmlFor="user_password"
                                  >
                                    <span
                                      className="pf-c-form__label-text"
                                    >
                                      Password
                                    </span>
                                    <span
                                      aria-hidden="true"
                                      className="pf-c-form__label-required"
                                    >
                                       
                                      *
                                    </span>
                                  </label>
                                   
                                </div>
                                <div
                                  className="pf-c-form__group-control"
                                >
                                  <TextInput
                                    autoComplete="off"
                                    autoFocus={true}
                                    id="user_password"
                                    isRequired={true}
                                    name="user[password]"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    type="password"
                                    validated="default"
                                    value=""
                                  >
                                    <TextInputBase
                                      aria-label={null}
                                      autoComplete="off"
                                      autoFocus={true}
                                      className=""
                                      id="user_password"
                                      innerRef={null}
                                      isDisabled={false}
                                      isIconSprite={false}
                                      isLeftTruncated={false}
                                      isReadOnly={false}
                                      isRequired={true}
                                      name="user[password]"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      ouiaSafe={true}
                                      type="password"
                                      validated="default"
                                      value=""
                                    >
                                      <input
                                        aria-invalid={false}
                                        aria-label={null}
                                        autoComplete="off"
                                        autoFocus={true}
                                        className="pf-c-form-control"
                                        data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                                        data-ouia-component-type="PF4/TextInput"
                                        data-ouia-safe={true}
                                        disabled={false}
                                        id="user_password"
                                        name="user[password]"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        required={true}
                                        type="password"
                                        value=""
                                      />
                                    </TextInputBase>
                                  </TextInput>
                                </div>
                              </div>
                            </GenerateId>
                          </FormGroup>
                        </FormGroup>
                      </PasswordField>
                      <PasswordConfirmationField
                        inputProps={
                          {
                            "errorMessage": undefined,
                            "fieldId": "user_password_confirmation",
                            "isRequired": true,
                            "isValid": true,
                            "label": "Password confirmation",
                            "name": "user[password_confirmation]",
                            "onBlur": [Function],
                            "onChange": [Function],
                            "value": "",
                          }
                        }
                      >
                        <FormGroup
                          helperTextInvalid="Password confirmation is mandatory"
                          inputProps={
                            {
                              "errorMessage": undefined,
                              "fieldId": "user_password_confirmation",
                              "isRequired": true,
                              "isValid": true,
                              "label": "Password confirmation",
                              "name": "user[password_confirmation]",
                              "onBlur": [Function],
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                          type="password"
                        >
                          <FormGroup
                            autoComplete="off"
                            fieldId="user_password_confirmation"
                            helperTextInvalid="Password confirmation is mandatory"
                            isRequired={true}
                            label="Password confirmation"
                            validated="default"
                          >
                            <GenerateId
                              prefix="pf-random-id-"
                            >
                              <div
                                autoComplete="off"
                                className="pf-c-form__group"
                              >
                                <div
                                  className="pf-c-form__group-label"
                                >
                                  <label
                                    className="pf-c-form__label"
                                    htmlFor="user_password_confirmation"
                                  >
                                    <span
                                      className="pf-c-form__label-text"
                                    >
                                      Password confirmation
                                    </span>
                                    <span
                                      aria-hidden="true"
                                      className="pf-c-form__label-required"
                                    >
                                       
                                      *
                                    </span>
                                  </label>
                                   
                                </div>
                                <div
                                  className="pf-c-form__group-control"
                                >
                                  <TextInput
                                    autoComplete="off"
                                    id="user_password_confirmation"
                                    isRequired={true}
                                    name="user[password_confirmation]"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    type="password"
                                    validated="default"
                                    value=""
                                  >
                                    <TextInputBase
                                      aria-label={null}
                                      autoComplete="off"
                                      className=""
                                      id="user_password_confirmation"
                                      innerRef={null}
                                      isDisabled={false}
                                      isIconSprite={false}
                                      isLeftTruncated={false}
                                      isReadOnly={false}
                                      isRequired={true}
                                      name="user[password_confirmation]"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      ouiaSafe={true}
                                      type="password"
                                      validated="default"
                                      value=""
                                    >
                                      <input
                                        aria-invalid={false}
                                        aria-label={null}
                                        autoComplete="off"
                                        className="pf-c-form-control"
                                        data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                                        data-ouia-component-type="PF4/TextInput"
                                        data-ouia-safe={true}
                                        disabled={false}
                                        id="user_password_confirmation"
                                        name="user[password_confirmation]"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        required={true}
                                        type="password"
                                        value=""
                                      />
                                    </TextInputBase>
                                  </TextInput>
                                </div>
                              </div>
                            </GenerateId>
                          </FormGroup>
                        </FormGroup>
                      </PasswordConfirmationField>
                      <input
                        id="password_reset_token"
                        name="password_reset_token"
                        type="hidden"
                        value="foo"
                      />
                      <ActionGroup>
                        <div
                          className="pf-c-form__group pf-m-action"
                        >
                          <div
                            className="pf-c-form__group-control"
                          >
                            <div
                              className="pf-c-form__actions"
                            >
                              <Button
                                className="pf-c-button pf-m-primary pf-m-block"
                                isDisabled={true}
                                name="commit"
                                type="submit"
                              >
                                <ButtonBase
                                  className="pf-c-button pf-m-primary pf-m-block"
                                  innerRef={null}
                                  isDisabled={true}
                                  name="commit"
                                  type="submit"
                                >
                                  <button
                                    aria-disabled={true}
                                    aria-label={null}
                                    className="pf-c-button pf-m-primary pf-m-disabled pf-c-button pf-m-primary pf-m-block"
                                    data-ouia-component-id="OUIA-Generated-Button-primary-2"
                                    data-ouia-component-type="PF4/Button"
                                    data-ouia-safe={true}
                                    disabled={true}
                                    name="commit"
                                    role={null}
                                    tabIndex={null}
                                    type="submit"
                                  >
                                    Change Password
                                  </button>
                                </ButtonBase>
                              </Button>
                            </div>
                          </div>
                        </div>
                      </ActionGroup>
                    </form>
                  </FormBase>
                </Form>
              </div>
            </LoginMainBody>
          </main>
          <LoginFooter>
            <footer
              className="pf-c-login__footer"
            >
              <p />
              <List>
                <ul
                  className="pf-c-list"
                />
              </List>
            </footer>
          </LoginFooter>
        </div>
      </div>
    </Login>
  </LoginPage>
</ChangePassword>
`;
